[package]
name = "leaf-android"
version = "0.1.0"
authors = ["ghost <noreply>"]
edition = "2021"

[lib]
name = "leaf"
path = "src/lib.rs"
crate-type = ["dylib"]

[features]
default = [
    "leaf/default-ring"
]

[dependencies]
leaf = { git = "https://github.com/eycorsican/leaf.git", package = "leaf"}
jni = { version = "0.21.1", default-features = false }
