[package]
name = "leaf-android"
version = "0.1.0"
authors = ["ghost <noreply>"]
edition = "2018"

[lib]
name = "leaf"
path = "src/lib.rs"
#crate-type = ["staticlib", "dylib"]
crate_type = ["dylib"]

[features]
default = [
    "leaf/default-ring"
]

default-ring = [
    "leaf/default-ring"
]

default-openssl = [
    "leaf/default-openssl"
]

auto-reload = ["leaf/auto-reload"]

[dependencies]
jni = { version = "0.21.1" }
leaf = { git = "https://github.com/eycorsican/leaf.git", default-features = false, optional = true}

